--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, rgb(0, 0, 0), red, yellow);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
@@ -377,45 +377,28 @@ a:hover{
 	background-position: right;
 }
 
-.btn-otp-submit{
-	display: block;
-	width: 100%;
-	height: 50px;
-	border-radius: 25px;
-	outline: none;
-	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
-	background-size: 200%;
-	font-size: 1.2rem;
-	color: #fff;
-	font-family: 'Poppins', sans-serif;
-	text-transform: uppercase;
-	margin: 1rem 0;
-	cursor: pointer;
-	transition: .5s;
-}
-.btn-otp-submit:hover{
-	background-position: right;
-}
+
+
 
 .btn-logout{
 	display: block;
-	width: 100%;
+	width: 50%;
 	height: 50px;
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, black, red, yellow);
 	background-size: 200%;
-	font-size: 1.2rem;
+	font-size: 0.9rem;
 	color: #fff;
 	font-family: 'Poppins', sans-serif;
 	text-transform: uppercase;
 	margin: 1rem 0;
+ 
 	cursor: pointer;
 	transition: .5s;
 }
-.btn-logut:hover{
+.btn-logout:hover{
 	background-position: right;
 }
 @media screen and (max-width: 1050px){
@@ -1961,9 +1944,7 @@ main#view-panel{
     right: 0;
     top: 3.5rem;
 }
-main#main {
-    /*margin-top: 8rem;*/
-}
+
 main#main.login {
     margin-top: unset;
 }
@@ -2183,26 +2164,6 @@ a:hover{
 	color: #38d39f;
 }
 
-.btn-submit{
-	display: block;
-	width: 100%;
-	height: 50px;
-	border-radius: 25px;
-	outline: none;
-	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
-	background-size: 200%;
-	font-size: 1.2rem;
-	color: #fff;
-	font-family: 'Poppins', sans-serif;
-	text-transform: uppercase;
-	margin: 1rem 0;
-	cursor: pointer;
-	transition: .5s;
-}
-.btn-submit:hover{
-	background-position: right;
-}
 
 .btn-otp-submit{
 	display: block;
@@ -2211,7 +2172,7 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, black, red, yellow);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
@@ -2225,23 +2186,6 @@ a:hover{
 	background-position: right;
 }
 
-.btn-logout{
-	display: block;
-	width: 100%;
-	height: 50px;
-	border-radius: 25px;
-	outline: none;
-	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
-	background-size: 200%;
-	font-size: 1.2rem;
-	color: #fff;
-	font-family: 'Poppins', sans-serif;
-	text-transform: uppercase;
-	margin: 1rem 0;
-	cursor: pointer;
-	transition: .5s;
-}
 .btn-logut:hover{
 	background-position: right;
 }
